feat: add RESP evaluation diagnostics